Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added constants WORKSPACES_ID and SECTIONS_ID
  
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-